# atem

./: .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
atem-compiler/: CMakeLists.txt  main.cpp
atem-compiler/include/AST/: ASTNode.h  DeclASTNode.h  ExprASTNode.h  StmtASTNode.h
atem-compiler/include/Basic/: RawSourceFile.h  Source.h  SourceLocation.h
atem-compiler/include/Exception/: Exception.h
atem-compiler/include/Lex/: Lexer.h  Token.h  TokenEnum.h
atem-compiler/include/Utils/: Lift.h  TerseLambda.h  addressof.h  boolean.h  co_resource.h  declval.h  fwd.h
atem-compiler/src/AST/: ASTNode.cpp
atem-compiler/src/Basic/: RawSourceFile.cpp  Source.cpp  SourceLocation.cpp
atem-compiler/src/Lex/: Lexer.cpp  Token.cpp
docs/: language-doc.md  library-doc.md
docs/design/: README.md
docs/design/basic/: Introduction.md  README.md  Syntax.md
docs/design/corelanguage/: Introduction.md  README.md
docs/design/generics/: README.md
docs/design/metaprogramming/: README.md  StaticReflection.md
grammar/: AtemLexer.g4  AtemParser.g4
grammar/.antlr/: AtemLexer.interp  AtemLexer.java  AtemLexer.tokens
meta-compiler/: CMakeLists.txt  main.cpp
meta-compiler/include/AST/: ASTNode.h  DeclASTNode.h  ExprASTNode.h  FunctionDeclASTNode.h  IntegerLiteralASTNode.h  NamedDeclASTNode.h  StmtASTNode.h  ValueDeclASTNode.h  ValueStmtASTNode.h
meta-compiler/include/Basic/: RawSourceFile.h  Source.h  SourceLocation.h
meta-compiler/include/Exception/: Exception.h
meta-compiler/include/Lex/: Lexer.h  Token.h  TokenEnum.h
meta-compiler/include/Utils/: Lift.h  TerseLambda.h  addressof.h  boolean.h  co_resource.h  declval.h  fwd.h
meta-compiler/include/utils/: boolean.h
meta-compiler/src/AST/: ASTNode.cpp
meta-compiler/src/Basic/: RawSourceFile.cpp  Source.cpp  SourceLocation.cpp
meta-compiler/src/Lex/: Lexer.cpp  Token.cpp
std/: std.keywords.metalang
test/: hello_world.mt
